main/webhook-enricher-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuma-webhook-enricher
  namespace: analytics
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "212.115.125.21/32"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /webhook
        pathType: Prefix
        backend:
          service:
            name: kuma-webhook-enricher
            port:
              number: 80
